Frontend/openshift/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: investment-search-frontend
spec:
  selector:
    app: investment-search-frontend
  ports:
    - port: 3000
      targetPort: 3000
